--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ comm==0.1.4
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+docopt==0.6.2
 exceptiongroup==1.1.2
 executing==1.2.0
 fastjsonschema==2.18.0
@@ -64,6 +65,7 @@ pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
 Pint==0.18
+pipreqs==0.4.13
 platformdirs==3.10.0
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
@@ -109,3 +111,5 @@ wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.1
+yarg==0.1.9
+streamlit
